Fixed minor visual bug, where the box-shadow for the page content spilled onto the footer

--- a/style/base.css
+++ b/style/base.css
@@ -321,6 +321,7 @@ footer.page_row {
     height: 5em;
     background-color: #2b2b2b;
     color: #fff;
+    z-index: 100;
 }
 
 /* has class .site_nav */
